<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright © 2025-2026 Petr Panteleyev -->
<!-- SPDX-License-Identifier: BSD-2-Clause -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.panteleyev</groupId>
    <artifactId>mk61</artifactId>
    <version>26.6.1</version>
    <packaging>jar</packaging>
    <name>MK-61</name>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <icon>icons/icon.ico</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <icon>icons/icon.icns</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>linux</name>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <type>APP_IMAGE</type>
                            <icon>icons/icon.png</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
        <appModule>mk</appModule>
        <appMainClass>org.panteleyev.mk61.Mk61Application</appMainClass>
        <timestamp>${maven.build.timestamp}</timestamp>
        <!-- Plugins -->
        <mavenCleanPluginVersion>3.5.0</mavenCleanPluginVersion>
        <mavenResourcePluginVersion>3.4.0</mavenResourcePluginVersion>
        <mavenCompilerPluginVersion>3.15.0</mavenCompilerPluginVersion>
        <mavenJarPluginVersion>3.5.0</mavenJarPluginVersion>
        <mavenSurefirePluginVersion>3.5.4</mavenSurefirePluginVersion>
        <mavenSurefireReportPluginVersion>3.5.4</mavenSurefireReportPluginVersion>
        <mavenDependencyPluginVersion>3.9.0</mavenDependencyPluginVersion>
        <mavenExecPluginVersion>3.5.0</mavenExecPluginVersion>
        <jpackageMavenPluginVersion>1.8.0</jpackageMavenPluginVersion>
        <!-- Dependencies -->
        <javaFxVersion>26.0.1</javaFxVersion>
        <controlsFxVersion>11.2.2</controlsFxVersion>
        <javaCommonsVersion>1.6.0</javaCommonsVersion>
        <javaFxHelpersVersion>2.6.0</javaFxHelpersVersion>
        <javaFreeDesktopVersion>0.5.1</javaFreeDesktopVersion>
        <jUnitVersion>6.1.0</jUnitVersion>
    </properties>

    <repositories>
        <repository>
            <id>panteleyev.org</id>
            <url>https://www.panteleyev.org/mvn/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>java-fx-helpers</artifactId>
            <version>${javaFxHelpersVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>freedesktop</artifactId>
            <version>${javaFreeDesktopVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>commons</artifactId>
            <version>${javaCommonsVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsFxVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${jUnitVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${mavenResourcePluginVersion}</version>
                <configuration>
                    <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompilerPluginVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${mavenJarPluginVersion}</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/jmods</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${appMainClass}</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mavenSurefirePluginVersion}</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${mavenDependencyPluginVersion}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/jmods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${mavenCleanPluginVersion}</version>
                <executions>
                    <execution>
                        <id>clean-jfx</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>${project.build.directory}/jmods</directory>
                                    <includes>
                                        <include>javafx-*</include>
                                    </includes>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>${jpackageMavenPluginVersion}</version>
                <configuration>
                    <name>MK-61</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>panteleyev.org</vendor>
                    <module>${appModule}/${appMainClass}</module>
                    <modulePaths>
                        <modulePath>${project.build.directory}/jmods</modulePath>
                        <modulePath>${env.JAVAFX_JMODS}</modulePath>
                    </modulePaths>
                    <destination>${project.build.directory}/dist</destination>
                    <removeDestination>true</removeDestination>
                    <javaOptions>
                        <option>-XX:NewRatio=1</option>
                        <option>-XX:+UseCompactObjectHeaders</option>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--sun-misc-unsafe-memory-access=allow</option>
                    </javaOptions>
                    <jLink>
                        <noHeaderFiles>true</noHeaderFiles>
                        <noManPages>true</noManPages>
                        <stripDebug>true</stripDebug>
                        <stripNativeCommands>true</stripNativeCommands>
                    </jLink>
                    <!-- Windows -->
                    <winDirChooser>true</winDirChooser>
                    <winMenu>true</winMenu>
                    <winUpgradeUuid>2574ee26-2d4b-4970-b074-821b3f77d0b9</winUpgradeUuid>
                    <winMenuGroup>panteleyev.org</winMenuGroup>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${mavenExecPluginVersion}</version>
                <configuration>
                    <executable>java</executable>
                </configuration>
                <executions>
                    <execution>
                        <id>run</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>-XX:NewRatio=1</argument>
                                <argument>-XX:+UseCompactObjectHeaders</argument>
                                <argument>--enable-native-access=javafx.graphics</argument>
                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                <argument>--module-path</argument>
                                <modulepath/>
                                <argument>--module</argument>
                                <argument>${appModule}/${appMainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>debug</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>-XX:NewRatio=1</argument>
                                <argument>-XX:+UseCompactObjectHeaders</argument>
                                <argument>--enable-native-access=javafx.graphics</argument>
                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                <!--suppress UnresolvedMavenProperty -->
                                <argument>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</argument>
                                <argument>--module-path</argument>
                                <modulepath/>
                                <argument>--module</argument>
                                <argument>${appModule}/${appMainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${mavenSurefireReportPluginVersion}</version>
                <configuration>
                    <outputName>MK-61</outputName>
                    <showSuccess>false</showSuccess>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
